# Openclassrooms-Home_Credit_MLOPS

./: .gitignore  pyproject.toml
.github/workflows/: tests.yml
notebooks/: eda.ipynb  modelisation.ipynb
src/app/: main.py  schemas.py
src/app/artifacts/: feature_cols.json  input_example.json  input_example_batch.json  model.pkl  threshold_config.json
