[project]
name = "projet-mlops"
version = "0.1.0"
description = "Skeleton MLOps: EDA, API FastAPI, tests, CI/CD"
authors = [{name = "Ksenia Dautel"}]
requires-python = ">=3.11,<3.14"
dependencies = [
  "pandas>=2.2",
  "scikit-learn>=1.3",
  "uvicorn>=0.38",
  "joblib>=1.4",
  "pydantic>=2.8"
]

[dependency-groups]
dev = [
  "pytest>=9.0.1",
  "pytest-cov>=5.0.0",
  "jupyter>=1.1.1",
  "ipykernel>=6.29.5"
]
